--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <div id="dashboard" class="tab-pane fade in active">
-<h1 class="no-margin skin-color">Hi {{ user.fullname }}, Welcome to Marketplace!</h1>
+<h1 class="no-margin skin-color">Hi {{ user.fullname }}, Welcome to your Buyer Dashboard!</h1>
 <p>All your bookings with us will appear here and you’ll be able to manage everything!</p>
 <br />
 <div class="row block">
