--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -11,8 +11,14 @@
             <h4 class="box-title">
                 <i class="icon soap-icon-heart yellow-color"></i>{{pro.name}}
             </h4>
-            <button class="btn all-btn status" ui-sref="main.equiDetails({id:pro.id})">View</button>
-            <button class="btn all-btn status">Unfavourite</button>
+            <a class="pull-right icon-right">
+                <i class="fa fa-trash"></i>
+            </a>
+            <a class="pull-right icon-right" ui-sref="main.equiDetails({id:pro.id})">
+                <i class="fa fa-eye"></i>
+            </a>
+            <!-- <button class="btn all-btn status">Unfavourite</button> -->
+            <!-- <button class="btn all-btn status" ui-sref="main.equiDetails({id:pro.id})">View</button> -->
         </div>
 
     </div>
