--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -15,7 +15,7 @@
                 <div class="comment-header clearfix">
                     <div class="review-score enquiry-buttons">
                         <a href="" class="pull-right">Mark as read</a>
-                        <button class="btn pull-right all-btn view-btn primary-btn" ui-sref="main.sellerAccount.inquiries.view({id:item.id})">View</button>
+                        <button class="btn pull-right all-btn view-btn primary-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
                         <!-- <a class="pull-right clickable-icon">
                             <i class="fa fa-eye"></i>
                         </a> -->
