--- a/src/app/views/seller-account/equipments/equipments.html
+++ b/src/app/views/seller-account/equipments/equipments.html
@@ -1,6 +1,6 @@
 <div id="dashboard-equipments" class="tab-pane fade in active">
 	<h1 class="no-margin skin-color">My Equipments
-		<button class="btn all-btn pull-right"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
+		<button class="btn all-btn pull-right primary-btn"><i class="icon soap-icon-plus"></i> Add New Equipment</button>
 	</h1>
 	<br />
 	<div class="gray-area select-filter">
@@ -45,12 +45,21 @@
 						<h3 class="time-util">Time Utilization: 47%</h3>
 						<h3>Dolar Utilization: 82%</h3>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 				<tr>
@@ -68,12 +77,21 @@
 						<h3 class="time-util">Time Utilization: 47%</h3>
 						<h3>Dolar Utilization: 82%</h3>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 				<tr>
@@ -91,12 +109,21 @@
 						<h3 class="time-util">Time Utilization: 47%</h3>
 						<h3>Dolar Utilization: 82%</h3>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 			</tbody>
