--- a/src/app/views/seller-account/inventory/inventory.html
+++ b/src/app/views/seller-account/inventory/inventory.html
@@ -1,6 +1,6 @@
 <div id="dashboard-equipments" class="tab-pane fade in active">
 	<h1 class="no-margin skin-color">My Equipments
-		<button class="btn all-btn pull-right"><i class="icon soap-icon-plus"></i> Add Inventory</button>
+		<button class="btn all-btn pull-right primary-btn"><i class="icon soap-icon-plus"></i> Add Inventory</button>
 	</h1>
 	<br />
 	<div class="gray-area select-product">
@@ -38,12 +38,21 @@
 					<td class="time-td pull-center vertically-middle">
 						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 				<tr>
@@ -60,12 +69,21 @@
 					<td class="time-td pull-center vertically-middle">
 						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 				<tr>
@@ -82,12 +100,21 @@
 					<td class="time-td pull-center vertically-middle">
 						<toggle-switch ng-click="valueChanged(inv)" ng-model="inv.is_active" on-label="Available" off-label="Not-Available"></toggle-switch>
 					</td>
-					<td class="pull-center">
+					<td class="pull-center action-td">
 						<p>
-							<button class="btn all-btn">View</button>
+							<!-- <button class="btn all-btn primary-btn">View</button> -->
+							<a href="">
+								<i class="fa fa-eye"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-pencil-square-o"></i>
+							</a>
+							<a href="">
+								<i class="fa fa-archive"></i>
+							</a>
 						</p>
-						<a href="">Edit</a>
-						<a href="">Archive</a>
+						<!-- <a href="">Edit</a> -->
+						<!-- <a href="">Archive</a> -->
 					</td>
 				</tr>
 			</tbody>
