--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <button ng-click="mdl.update()">Update Status</button>
+            <button ng-click="mdl.update()" class="btn all-btn primary-btn">Update Status</button>
         </form>
     </div>
     <div class="col-md-6" ng-show="mdl.item.current_status=='confirmed'" style="border: 1px solid #EEE">
