--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -18,9 +18,15 @@
             <i class="icon yellow-color circle"></i>${{inv.total}}
         </h5>
 
+        <a class="pull-right" ng-click="invoicesMdl.pay(inv)">
+            <i class="fa fa-money"></i>
+        </a>
+        <a class="pull-right" ui-sref="main.account.invoices.view({id:inv.id})">
+            <i class="fa fa-eye"></i>
+        </a>
 
-        <button class="btn all-btn status" process-indicator  ng-click="invoicesMdl.pay(inv)">Pay Now</button>
-        <button class="btn all-btn status" ui-sref="main.account.invoices.view({id:inv.id})">View Details</button>
+        <!-- <button class="btn all-btn status" process-indicator  ng-click="invoicesMdl.pay(inv)">Pay Now</button> -->
+        <!-- <button class="btn all-btn status" ui-sref="main.account.invoices.view({id:inv.id})">View Details</button> -->
     </div>
 </div>
 </div>
