--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -1,39 +1,20 @@
 
-<h2>Manage Your Jobsites <button class="btn all-btn pull-right status" ui-sref="main.account.jobsites.add">Add Jobsite</button></h2>
-<!--<div class="filter-section gray-area clearfix">
-    <form>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
-            <input type="radio" name="filter" />
-            All Equipments
-        </label>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='rent'}" ng-click="listEquiMdl.updateFilter('rent')">
-            <input type="radio" name="filter" />
-            On Rent
-        </label>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='vacant'}" ng-click="listEquiMdl.updateFilter('vacant')">
-            <input type="radio" name="filter" />
-            Vacant
-        </label>
-    </form>
-</div>-->
+<h2>Manage Your Jobsites <button class="btn all-btn pull-right status primary-btn" ui-sref="main.account.jobsites.add">
+    <i class="fa fa-plus"></i>&nbsp Add Jobsite</button></h2>
 <div class="booking-history">
     <div class="booking-info clearfix" ng-repeat="site in mdl.sites">
-        <!--<div class="date">
-            <a class="hover-effect popup-gallery"><img width="72" height="72" alt="" src=""></a>
-        </div>-->
         <h4 class="box-title">
             <i class="icon soap-icon-departure yellow-color circle"></i>{{site.name}}
             <small>{{site.city.name}},{{site.state.name}},{{site.country.name}}</small>
         </h4>
-        <!--<dl class="info">
-            <dt>Used This Jobsite</dt>
-            <dd>12 times</dd>
-            <dt>Popularity Level</dt>
-            <dd>3</dd>
-        </dl>-->
-
-        <button class="btn all-btn status" ng-click="delete(site)">Archive</button>
-        <button class="btn all-btn status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button>
+        <a ng-click="delete(site)" class="pull-right">
+            <i class="fa fa-archive"></i>
+        </a>
+        <a ui-sref="main.account.jobsites.edit({id:site.id})" class="pull-right">
+            <i class="fa fa-pencil"></i>
+        </a>
+        <!-- <button class="btn all-btn status" ng-click="delete(site)">Archive</button> -->
+        <!-- <button class="btn all-btn status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button> -->
     </div>
 
 </div>
