--- a/src/app/views/seller-account/invoices/view/view.html
+++ b/src/app/views/seller-account/invoices/view/view.html
@@ -1,76 +1,75 @@
-<div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
-
-    <h2>Invoice Details</h2>
-    <dl class="term-description">
-        <dt>Order number:</dt><dd>{{mdl.invoice.order.id}}</dd>
-    </dl>
-    <hr />
-    <div class="row invoice-address align-address">
-        <div class="col-md-4">
-            <h2>Shipping Address</h2>
-            <dl class="term-description">
-                <dd>{{mdl.item.invoice.order.shipping_address.first_name}} {{mdl.item.invoice.order.shipping_address.last_name}}</dd>
-                <dd>{{mdl.item.invoice.order.shipping_address.address1+' '+mdl.item.invoice.order.shipping_address.address2}}</dd>
-                <dd>{{mdl.item.invoice.order.shipping_address.city.name}}-{{mdl.item.invoice.order.shipping_address.zip_code}}</dd>
-                <dd>{{mdl.item.invoice.order.shipping_address.country.name}}</dd>
-            </dl>
-        </div>
-        <div class="col-md-4">
-            <h2>Billing Address</h2>
-            <dl class="term-description">
-                <dd>{{mdl.item.invoice.order.billing_address.first_name}} {{mdl.item.invoice.order.billing_address.last_name}}</dd>
-                <dd>{{mdl.item.invoice.order.billing_address.address1+' '+mdl.item.invoice.order.billing_address.address2}}</dd>
-                <dd>{{mdl.item.invoice.order.billing_address.city.name}}-{{mdl.item.invoice.order.billing_address.zip_code}}</dd>
-                <dd>{{mdl.item.invoice.order.billing_address.country.name}}</dd>
-            </dl>
-        </div>
-    </div>
-
+<div class="booking-information travelo-box invoice-details" style="margin-bottom: 0px; padding: 0;">
+		<h2>Invoice Details</h2>
+		<dl class="term-description">
+				<dt>Order number:</dt><dd>{{mdl.invoice.order.id}}</dd>
+		</dl>
+		<hr />
+		<div class="row invoice-address align-address" style="margin-bottom: 0;">
+				<div class="col-md-6">
+						<h2>Shipping Address</h2>
+						<dl class="term-description">
+								<dd>{{mdl.item.invoice.order.shipping_address.first_name}} {{mdl.item.invoice.order.shipping_address.last_name}}</dd>
+								<dd>{{mdl.item.invoice.order.shipping_address.address1+' '+mdl.item.invoice.order.shipping_address.address2}}</dd>
+								<dd>{{mdl.item.invoice.order.shipping_address.city.name}}-{{mdl.item.invoice.order.shipping_address.zip_code}}</dd>
+								<dd>{{mdl.item.invoice.order.shipping_address.country.name}}</dd>
+						</dl>
+				</div>
+				<div class="col-md-6">
+						<h2>Billing Address</h2>
+						<dl class="term-description">
+								<dd>{{mdl.item.invoice.order.billing_address.first_name}} {{mdl.item.invoice.order.billing_address.last_name}}</dd>
+								<dd>{{mdl.item.invoice.order.billing_address.address1+' '+mdl.item.invoice.order.billing_address.address2}}</dd>
+								<dd>{{mdl.item.invoice.order.billing_address.city.name}}-{{mdl.item.invoice.order.billing_address.zip_code}}</dd>
+								<dd>{{mdl.item.invoice.order.billing_address.country.name}}</dd>
+						</dl>
+				</div>
+		</div>
 </div>
-<div id="tour-details" class="travelo-box order-details" style="padding-top: 0px;">
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
-        <div class="image-container table-cell" style="width: 100px;"><img src="http://placehold.it/80x80" alt=""></div>
-        <div class="description" style="width: 250px;">
-            <h4>Hiren product name</h4>
-        </div>
-        <div class="table-cell" style="width: 400px;">
-            <dl class="term-description" style="width: 49%; float: left;">
-                <dt>Rented For</dt><dd>12 days</dd>
-                <dt>Order Type</dt><dd>Postpaid</dd>
-                <dt>Quantity</dt><dd>3</dd>
-            </dl>
-            <dl class="term-description" style="width: 49%; float: left;">
-                <dt>Shipping</dt><dd>$100</dd>
-                <dt>Overuse</dt><dd>$178</dd>
-                <dt>Additional</dt><dd>$230</dd>
-            </dl>
-        </div>
-
-        <div class="price-section table-cell">
-            <div class="price">
-                <div class="price-per-unit">$1200</div>
-            </div>
-        </div>
-    </div>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
-        <div class="description">
-            <h4>Cart Total</h4>
-        </div>
-
-        <br />
-        <div class="table-cell">
-            <dl class="term-description">
-                <dt>Shipping Cost</dt><dd>$50</dd>
-                <dt>Overusage</dt><dd>$215</dd>
-                <dt>Additional</dt><dd>${{mdl.item.additional_charge}}</dd>
-            </dl>
-        </div>
-        <div class="price-section table-cell">
-            <div class="price"><div class="price-per-unit">${{mdl.item.total}}</div></div>
-        </div>
-    </div>
-    <button class="btn all-btn uppercase pull-left">Back to Invoice List</button>
-    <button class="btn all-btn uppercase pull-right">Download PDF</button>
-    <button style="margin-right:4px;" class="btn all-btn uppercase pull-right" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
+<div class="row">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoice-details-col">
+		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+			<img src="http://placehold.it/80x80" alt="">
+		</div>
+		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 product-name">
+			<h4>Hiren product name</h4>
+		</div>
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 description-col">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+				<p>Rented For <span class="pull-right">12 days</span></p>
+				<p>Order Type <span class="pull-right">Postpaid</span></p>
+				<p>Quantity <span class="pull-right">3</span></p>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 right-col">
+				<p>Shipping <span class="pull-right">$100</span></p>
+				<p>Overuse <span class="pull-right">$178</span></p>
+				<p>Additional <span class="pull-right">$230</span></p>
+			</div>
+		</div>
+		<div class="col-lg-1 col-md-1 col-sm-1 col-xs-12 product-name pull-center">
+			<h4>$1200</h4>
+		</div>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-total invoice-cart-total">
+	 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+			<div class="description">
+				<h4 style="margin-top: 28px;">Cart Total</h4>
+			</div>
+	 	</div>
+	 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 add-cost">
+	 		<p>Shipping Cost <span class="pull-right">$50</span></p>
+	 		<p>Overusage <span class="pull-right">$215</span></p>
+	 		<p>Additional <span class="pull-right">${{mdl.item.additional_charge}}</span></p>
+	 	</div>
+	 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 total-cost">
+			<div>
+				${{mdl.item.total}}
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<button class="btn all-btn uppercase pull-left primary-btn" ui-sref="main.sellerAccount.invoices.list">Back to Invoice List</button>
+		<button class="btn all-btn uppercase pull-right primary-btn">Download PDF</button>
+		<button style="margin-right:4px;" class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.invoices.edit({id:0})">Edit Invoice</button>
+	</div>
 </div>
 
