--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -18,7 +18,10 @@
             <i class="icon yellow-color circle"></i>$ {{order.subtotal}}
         </h4>
 
-        <button class="btn all-btn pull-right" ui-sref="main.sellerAccount.orders.view({id:order.id})">View</button>
+        <!-- <button class="btn all-btn pull-right primary-btn" ui-sref="main.sellerAccount.orders.view({id:order.id})">View</button> -->
+        <a ui-sref="main.sellerAccount.orders.view({id:order.id})" class="pull-right">
+            <i class="fa fa-eye"></i>
+        </a>
 
     </div>
 
