--- a/src/app/views/seller-account/seller-account.html
+++ b/src/app/views/seller-account/seller-account.html
@@ -1,3 +1,7 @@
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col">
+  <a ui-sref="home">Home /</a>
+  <span>My Seller Dashboard</span>
+</div>
 <div class="tab-container full-width-style arrow-left dashboard">
   <ul class="tabs">
   	<li active-state="main.sellerAccount.dashboard" ui-sref="main.sellerAccount.dashboard"><a>Dashboard</a></li>
