--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 col-sm-6 col-md-12 general-setting-col">
             <label>Minimum Contract Period</label>
             <input required name="minimumContract" ng-model="generalMdl.minimumContractPeriod" type="text" class="input-text" placeholder="number of days"> Days &nbsp
-            <button class="btn all-btn auto-width" ng-click="generalMdl.save()">Save</button>
+            <button class="btn all-btn auto-width primary-btn" ng-click="generalMdl.save()">Save</button>
         </div>
     </div>
 </form>
